samples/_failures_safe/1761390940_0814fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0049179e.c: In function ‘main’:
./samples/SAFE/__tmp_0049179e.c:156:21: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  156 |                     print
      |                     ^~~~~
      |                     printf
./samples/SAFE/__tmp_0049179e.c:156:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0049179e.c:156:26: error: expected ‘;’ at end of input
  156 |                     print
      |                          ^
      |                          ;
./samples/SAFE/__tmp_0049179e.c:156:21: error: expected declaration or statement at end of input
  156 |                     print
      |                     ^~~~~
./samples/SAFE/__tmp_0049179e.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0049179e.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0049179e.c:156:21: error: expected declaration or statement at end of input
